<resources>
    <string name="app_name">assignment2</string>
    <string name="button3">Button 3</string>
    <string name="button2">Button 2</string>
    <string name="checkbox">CheckBox</string>
    <string name="checkbox_6">CheckBox 6</string>
    <string name="checkbox_2">CheckBox 2</string>
    <string name="this_is_my_layout_project">This is my layout project</string>
    <string name="checkbox_1">CheckBox 1</string>
    <string name="checkbox_4">CheckBox 4</string>
    <string name="checkbox_5">CheckBox 5</string>
    <string name="smiley_face">Smiley face</string>
    <string name="checkbox_3">Checkbox 3</string>
    <string name="no">Button 1</string>
</resources>